@@ -1,6 +1,7 @@
 v2.3.1 (2019.09.xx)
   - Fix potential for a race condition in background task scheduler when synchronously executing a task
   - Improve performance of backend series episode (timers) discovery
+  - (Windows) Wait for IPv4 network connectivity to become available before executing wakeup discovery tasks
 
 v2.3.0 (2019.09.12)
   - Update cURL library to version 7.66.0
